--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import LatexApp from "../components/latex/LatexApp.svelte";
 ---
 <BaseLayout title="LaTeX Builder">
-  <div class="mx-auto max-w-6xl p-4 md:p-6">
+  <div class="mx-auto max-w-475 p-4 md:p-6">
     <LatexApp client:load />
   </div>
 </BaseLayout>
